utils/edid: also read edid colorimetry

The libdisplay-info default colorimetry may be sRGB if the EDID indicates that
the display is in sRGB mode by default.
The EDID one might still be sRGB in that case too, but it seems like they differ
in practice.

BUG: 505971